--- a/css/main.css
+++ b/css/main.css
@@ -668,6 +668,13 @@ table tr th :last-child,
 table tr td :last-child {
   margin-bottom: 0;
 }
+.table-borderless th,
+.table-borderless td,
+.table-borderless thead th,
+.table-borderless tbody + tbody {
+  border: 0;
+  border-top: hidden;
+}
 
 /* --- Code blocks --- */
 
